[package]
name = "cc"
version = "1.0.46"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/cc-rs"
homepage = "https://github.com/alexcrichton/cc-rs"
documentation = "https://docs.rs/cc"
description = """
A build-time dependency for Cargo build scripts to assist in invoking the native
C compiler to compile native C code into a static archive to be linked into Rust
code.
"""
keywords = ["build-dependencies"]
readme = "README.md"
categories = ["development-tools::build-utils"]
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2018"

[dependencies]
num_cpus = { version = "1.10", optional = true }
jobserver = { version = "0.1.16", optional = true }

[features]
parallel = ["num_cpus", "jobserver"]

[dev-dependencies]
tempdir = "0.3"
