[package]
name = "cc"
version = "1.0.73"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexcrichton/cc-rs"
homepage = "https://github.com/alexcrichton/cc-rs"
documentation = "https://docs.rs/cc"
description = """
A build-time dependency for Cargo build scripts to assist in invoking the native
C compiler to compile native C code into a static archive to be linked into Rust
code.
"""
keywords = ["build-dependencies"]
readme = "README.md"
categories = ["development-tools::build-utils"]
exclude = ["/.github"]
edition = "2018"

[dependencies]
jobslot = { version = "0.2.0", optional = true }

[features]
parallel = ["jobslot"]

[dev-dependencies]
tempfile = "3"
