[package]
name = "windows-registry"
version = "0.1.0"
edition = "2018"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/cc-rs"
homepage = "https://github.com/rust-lang/cc-rs"
documentation = "https://docs.rs/windows-registry"
description = """
A build-time dependency for Cargo build scripts to assist in invoking the native
C compiler to compile native C code into a static archive to be linked into Rust
code.
"""
keywords = ["build-dependencies"]
readme = "../README.md"
categories = ["development-tools::build-utils"]
rust-version = "1.63"


[dependencies]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(disable_clang_cl_tests)'] }

