[package]
name = "windows-registry"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/cc-rs"
documentation = "https://docs.rs/windows-registry"
description = "Read MSVC versions from the registry and from COM interfaces"
keywords = ["build-dependencies"]
categories = ["development-tools::build-utils"]
rust-version = "1.63"


[dependencies]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(disable_clang_cl_tests)'] }

